# dnb_ros_driver_templates

./: README.md
dnb_driver_template_cpp/: CMakeLists.txt  package.xml
dnb_driver_template_cpp/include/: driver_template.h  individual_command_template.h
dnb_driver_template_cpp/launch/: robot_A.launch  robot_B.launch  robot_generic.launch  start.launch
dnb_driver_template_cpp/module_config/: module.yaml
dnb_driver_template_cpp/module_config/robot/: robot_B.yaml  robot_generic.yaml
dnb_driver_template_cpp/src/: driver_template.cpp  individual_command_template.cpp
dnb_driver_template_cpp/urdf/: Readme.md
dnb_driver_template_python/: CMakeLists.txt  package.xml
dnb_driver_template_python/launch/: robot_A.launch  robot_B.launch  robot_generic.launch  start.launch
dnb_driver_template_python/meshes/: Readme.md
dnb_driver_template_python/module_config/: module.yaml
dnb_driver_template_python/module_config/robot/: robot_A.yaml
dnb_driver_template_python/scripts/: driver_template.py  individual_command_template.py  rmi_lib.py
