<?xml version="1.0"?>
<package format="2">
  <name>dnb_driver_template_cpp</name>
  <version>0.0.0</version>
  <description>The dnb_driver_template_cpp package</description>

  <maintainer email="florian.eith@dragandbot.com">Florian Eith</maintainer>

  <license>drag and bot GmbH</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>robot_movement_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>industrial_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>dnb_msgs</build_depend>

  <build_export_depend>robot_movement_interface</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>industrial_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>dnb_msgs</build_export_depend>

  <exec_depend>robot_movement_interface</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>industrial_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>dnb_msgs</exec_depend>
</package>
